--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
            <div>
             <a href="#"><img src="2.png"></a>
            </div>
-           <div>
+           <div class="relative">
             <a href="#"><img class="circle1" src="5.png">
              <img src="4.png"></a>
            </div>
            <div>
             <a href="#"><img src="3.png"></a>
            </div>
-           <div>
+           <div class="relative">
             <a href="#"><img src="6.png">
             <img class="circle2" src="7.png"></a>
            </div>
