--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flexs</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="container">
@@ -21,22 +20,22 @@
              </svg></a>
            </div>
            <div>
-            <a href="#"><img src="2.png"></a>
+            <a href="#"><img src="img/2.png"></a>
            </div>
            <div class="relative">
-            <a href="#"><img class="circle1" src="5.png">
-             <img src="4.png"></a>
+            <a href="#"><img class="circle1" src="img/5.png">
+             <img src="img/4.png"></a>
            </div>
            <div>
-            <a href="#"><img src="3.png"></a>
+            <a href="#"><img src="img/3.png"></a>
            </div>
            <div class="relative">
-            <a href="#"><img src="6.png">
-            <img class="circle2" src="7.png"></a>
+            <a href="#"><img src="img/6.png">
+            <img class="circle2" src="img/7.png"></a>
            </div>
        </div>
        <div class="exit">
-        <a href="#"><img src="8.png"></a>
+        <a href="#"><img src="img/8.png"></a>
        </div>
   </div>
  <div class="column2">
