--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Flexs</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -39,12 +40,185 @@
        </div>
   </div>
  <div class="column2">
-    <div>2
+  <div class="block1">  
+    <div class="hello">
+      <div>
+        <div class="Josh">Hello Josh!</div>
+        <div class="see_you">It's good to see you again.</div>
+      </div>
+      <div class="man">
+        <img src="man/body.png">
+        <img src="man/hand.png" class="hand">
+        <img src="man/neck1.png" class="neck1">
+        <img src="man/neck2.png" class="neck2">
+        <img src="man/face.png" class="face">
+        <img src="man/mouth.png" class="mouth">
+        <img src="man/nose.png" class="nose">
+        <img src="man/inglass.png" class="inglass">
+        <img src="man/glass.png" class="glass1">
+        <img src="man/glass.png" class="glass2">
+        <img src="man/ear1.png" class="ear1">
+        <img src="man/ear2.png" class="ear2">
+        <img src="man/inear.png" class="inear1">
+        <img src="man/inear2.png" class="inear2">
+        <img src="man/eye.png" class="eye1">
+        <img src="man/eye.png" class="eye2">     
+        <img src="man/eyebrow.png" class="eyebrow1">
+        <img src="man/eyebrow.png" class="eyebrow2">
+        <img src="man/brain.png" class="brain">
+        <img src="man/hair1.png" class="hair1">
+        <img src="man/hair2.png" class="hair2">
+      </div>
     </div>
- </div>
- <div class="column3">
-    <div>3
+    <div class="spanish">
+      <div class="b2">
+        <div class="miniimg">
+
+        </div>
+        <div>
+          <div class="title1">Spanish B2</div>
+          <div class="title2">by Alejandro Velazquez</div>
+        </div>
+        <div class="percent">83%<img src="img/Ellipse 1.png"></div>
+        <div><button>Continue</button></div>
+      </div>
+      <div class="arrows">
+        <img src="img/Rectangle.png">
+        <img src="img/left.png" alt="left">
+      </div>
+      <div class="arrows">
+        <img src="img/Rectangle.png">
+        <img src="img/right.png" alt="right">
+      </div>
+    </div>
+  </div>
+  <div class="minimenu">
+    <div> 
+      Courses
+    </div>
+    <div>
+      <span>All Courses</span>
+      <span>The Newest</span>
+      <span>Top Rated</span>
+      <span>Most Popular</span> 
+    </div>
+  </div>
+  <div class="block2">
+    <div class="courses">
+      <div class="miniimg">
+
+      </div>
+      <div>
+        <div class="title1">
+          Learn Figma
+        </div>
+        <div class="title2">
+          by Christopher Morgan
+        </div>
+      </div>
+      <div class="title2 clock">
+        <img src="img/clock.png">
+        6h 30min
+      </div>
+      <div class="title2 fire">
+        <img src="img/fire.png">
+        4,7
+      </div>
+      <div><button>View course</button></div>
+    </div>
+    <div class="courses">
+      <div class="miniimg">
+
+      </div>
+      <div>
+        <div class="title1">
+          Analog photography
+        </div>
+        <div class="title2">
+          by Gordon Norman
+        </div>
+      </div>
+      <div class="title2 clock">
+        <img src="img/clock.png">
+        3h 15min
+      </div>
+      <div class="title2 fire">
+        <img src="img/fire.png">
+        4,7
+      </div>
+      <div><button>View course</button></div>
+    </div>
+    <div class="courses">
+      <div class="miniimg insta">
+      </div>
+      <div>
+        <div class="title1">
+          Master Instagram
+        </div>
+        <div class="title2">
+          by Sophie Gill
+        </div>
+      </div>
+      <div class="title2 clock">
+        <img src="img/clock.png">
+        7h 40min
+      </div>
+      <div class="title2 fire">
+        <img src="img/fire.png">
+        4,6
+      </div>
+      <div><button>View course</button></div>
+    </div>
+    <div class="courses">
+      <div class="miniimg">
+    
+      </div>
+      <div>
+        <div class="title1">
+          Basics of drawing
+        </div>
+        <div class="title2">
+          by Jean Tate
+        </div>
+      </div>
+      <div class="title2 clock">
+        <img src="img/clock.png">
+        11h 30min
+      </div>
+      <div class="title2 fire">
+        <img src="img/fire.png">
+        4,8
+      </div>
+      <div><button>View course</button></div>
+    </div>
+    <div class="courses">
+      <div class="miniimg">
+         <div class="ps"><div>Ps</div></div>
+      </div>
+      <div>
+        <div class="title1">
+          Photoshop - Essence
+        </div>
+        <div class="title2">
+          by David Green
+        </div>
+      </div>
+      <div class="title2 clock">
+        <img src="img/clock.png">
+        5h 35min
+      </div>
+      <div class="title2 fire">
+        <img src="img/fire.png">
+        4,7
+      </div>
+      <div><button>View course</button></div>
     </div>
  </div>
 </div>
+<div class="column3">
+  <div>
+  </div>
+ </div>
+</div>
 </body>
+</html>
