--- a/index.html
+++ b/index.html
@@ -47,33 +47,12 @@
         <div class="see_you">It's good to see you again.</div>
       </div>
       <div class="man">
-        <img src="man/body.png">
-        <img src="man/hand.png" class="hand">
-        <img src="man/neck1.png" class="neck1">
-        <img src="man/neck2.png" class="neck2">
-        <img src="man/face.png" class="face">
-        <img src="man/mouth.png" class="mouth">
-        <img src="man/nose.png" class="nose">
-        <img src="man/inglass.png" class="inglass">
-        <img src="man/glass.png" class="glass1">
-        <img src="man/glass.png" class="glass2">
-        <img src="man/ear1.png" class="ear1">
-        <img src="man/ear2.png" class="ear2">
-        <img src="man/inear.png" class="inear1">
-        <img src="man/inear2.png" class="inear2">
-        <img src="man/eye.png" class="eye1">
-        <img src="man/eye.png" class="eye2">     
-        <img src="man/eyebrow.png" class="eyebrow1">
-        <img src="man/eyebrow.png" class="eyebrow2">
-        <img src="man/brain.png" class="brain">
-        <img src="man/hair1.png" class="hair1">
-        <img src="man/hair2.png" class="hair2">
+        <img src="img/man.png" alt="man">
       </div>
     </div>
     <div class="spanish">
       <div class="b2">
-        <div class="miniimg">
-
+        <div class="miniimg sp">
         </div>
         <div>
           <div class="title1">Spanish B2</div>
@@ -105,8 +84,7 @@
   </div>
   <div class="block2">
     <div class="courses">
-      <div class="miniimg">
-
+      <div class="miniimg figma">
       </div>
       <div>
         <div class="title1">
@@ -127,8 +105,7 @@
       <div><button>View course</button></div>
     </div>
     <div class="courses">
-      <div class="miniimg">
-
+      <div class="miniimg analog">
       </div>
       <div>
         <div class="title1">
@@ -170,8 +147,7 @@
       <div><button>View course</button></div>
     </div>
     <div class="courses">
-      <div class="miniimg">
-    
+      <div class="miniimg pen">
       </div>
       <div>
         <div class="title1">
@@ -192,8 +168,7 @@
       <div><button>View course</button></div>
     </div>
     <div class="courses">
-      <div class="miniimg">
-         <div class="ps"><div>Ps</div></div>
+      <div class="miniimg ps">  
       </div>
       <div>
         <div class="title1">
