--- a/index.html
+++ b/index.html
@@ -191,9 +191,68 @@
  </div>
 </div>
 <div class="column3">
-  <div>
+  <div class="block3">
+    <div class="search">
+        <img src="img/search.png" alt="serch">
+        <input type="search">
+    </div>
+    <div class="bell">
+      <img src="img/bell.png" alt="bell">
+    </div>
+    <div class="photo">
+      <img src="img/photo.png" alt="photo">
+    </div>
   </div>
- </div>
+  <div class="block4">
+    <div class="process">
+      <div class="number1">
+        11
+      </div>
+      <div class="progress1">
+        Courses completed
+      </div>
+    </div>
+    <div class="process">
+      <div class="number2">
+        4
+      </div>
+      <div class="progress2">
+        Courses in progress
+      </div>
+    </div>
+  </div>
+  <div class="stats">
+    Your statistics
+  </div>
+  <div class="block5">
+    <div>
+      <span>Learning Hours</span><span>My Courses</span>
+    </div>
+    <div>
+      <select>
+        <option value="Weekly">Weekly</option>
+      </select>
+    </div>
+  </div>
+  <div>
+    <img src="img/Graph.png" alt="graph">
+  </div>
+  <div class="block6">
+    <div>
+      <div class="more">
+        Lern even more!
+      </div>
+      <div class="prem">
+        Unlock premium features only for $9.99 per month.
+      </div>
+      <button>
+        Go Premium
+      </button>
+    </div>
+    <div>
+      <img src="img/book and brain.png" alt="book and brain">
+    </div>
+  </div>
 </div>
 </body>
 </html>
