--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
       </select>
     </div>
   </div>
-  <div>
+  <div class="graph">
     <img src="img/Graph.png" alt="graph">
   </div>
   <div class="block6">
